--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ gemfile:
   - gemfiles/3.1.gemfile
   - gemfiles/3.2.gemfile
   - gemfiles/4.0.gemfile
+
+matrix:
+  exclude:
+    rvm: 1.9.2
+    gemfile: gemfiles/4.0.gemfile
