--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ gemfile:
 
 matrix:
   exclude:
-    rvm: 1.9.2
-    gemfile: gemfiles/4.0.gemfile
+    - rvm: 1.9.2
+      gemfile: gemfiles/4.0.gemfile
